# adventofcode

./: .dccache  .env  .gitignore  Makefile  README.md  input.py  pyproject.toml  requirements.txt
.aoc_lube/: .token
2015/: day_01.py  day_02.py  day_03.py  day_06.py  day_07.py  day_11.py  day_12.py  day_13.py  day_14.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py
2015/aoc_helper/: .token  constants.py  inputs.yaml  submissions.yaml  utils.py
2019/: day_1.py  day_2.py  day_3.py  day_3_input.txt  day_3_try_2  day_5.py  day_6.py  day_8.py
2020/: day_1.py  day_2.py  day_3.py  day_4.py  day_4_input_test.txt  day_5.py  day_6.py  day_7.py  draw_card.py
2021/: day_10.py  day_11.py  day_14.py  day_15.py  day_16.py  day_17.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  test.py
2021/day_2/: day_3.py
2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_25.py
2022/aoc_helper/: .token  __init__.py  constants.py  inputs.yaml  submissions.yaml  utils.py
2023/1/: main.py
2023/10/: main.py
2023/11/: main.py
2023/12/: main.py
2023/2/: main.py
2023/3/: main.py
2023/4/: main.py
2023/5/: main.py
2023/6/: main.py
2023/7/: main.py
2023/8/: main.py
2023/9/: main.py
2023/python/: .env
2023/python/01/: day.py
2023/python/02/: day.py
2023/python/25/: day.py
puzzles/: puzzle_3.py  puzzles_3_4.R
puzzles_1-2/: puzzle-1-input.R  puzzle-1.R  puzzles_1_2.R  puzzles_3_4.R
